# remote-executor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/remote_executor/: __main__.py  cli.py  config.py  docker.py  executor.py  init_cmd.py  mutagen.py  paths.py  ssh.py  state.py
src/remote_executor/backends/: __init__.py  modal_backend.py  ssh_docker.py
src/remote_executor/mcp_server/: server.py
tests/: test_config.py  test_mutagen_download.py  test_ssh_cmdbuild.py
