[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remote-executor"
version = "0.1.0"
description = "Run Claude Code commands in a remote execution environment (SSH+Docker or Modal), with workspace sync."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Koen" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.12",
    "mcp>=1.2",
    "httpx>=0.27",
    "platformdirs>=4.2",
    "pydantic>=2.6",
    "tomli-w>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
modal = ["modal>=0.73"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[project.scripts]
remote-executor = "remote_executor.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/remote_executor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
